language/move-prover/tests/sources/functional/invariants.exp
Move prover returns: exiting with boogie verification errors
error:  This assertion might not hold.

    ┌── tests/sources/functional/invariants.move:11:9 ───
    │
 11 │         invariant greater_one(x);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:37:5: invalid_R_pack (entry)

error:  This assertion might not hold.

    ┌── tests/sources/functional/invariants.move:14:9 ───
    │
 14 │         invariant update x <= old(x) && tautology();
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:59:5: invalid_R_update (entry)
    =     at tests/sources/functional/invariants.move:60:13: invalid_R_update
    =     at tests/sources/functional/invariants.move:61:17: invalid_R_update
    =         r = <redacted>,
    =         t = <redacted>
    =     at tests/sources/functional/invariants.move:62:20: invalid_R_update
    =         r = <redacted>

error:  This assertion might not hold.

    ┌── tests/sources/functional/invariants.move:14:9 ───
    │
 14 │         invariant update x <= old(x) && tautology();
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:88:5: invalid_R_update_branching (entry)
    =     at tests/sources/functional/invariants.move:89:13: invalid_R_update_branching
    =         b = <redacted>,
    =         t1 = <redacted>
    =     at tests/sources/functional/invariants.move:90:24: invalid_R_update_branching
    =         t2 = <redacted>
    =     at tests/sources/functional/invariants.move:92:13: invalid_R_update_branching
    =     at tests/sources/functional/invariants.move:97:13: invalid_R_update_branching
    =     at tests/sources/functional/invariants.move:99:20: invalid_R_update_branching
    =         r = <redacted>,
    =         r = <redacted>
    =     at tests/sources/functional/invariants.move:100:10: invalid_R_update_branching

error:  This assertion might not hold.

    ┌── tests/sources/functional/invariants.move:14:9 ───
    │
 14 │         invariant update x <= old(x) && tautology();
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:79:5: invalid_R_update_indirectly (entry)
    =     at tests/sources/functional/invariants.move:80:13: invalid_R_update_indirectly
    =     at tests/sources/functional/invariants.move:81:28: invalid_R_update_indirectly
    =         t = <redacted>
    =     at tests/sources/functional/invariants.move:84:5: update_helper (entry)
    =     at tests/sources/functional/invariants.move:85:9: update_helper
    =         r = <redacted>,
    =         r = <redacted>
    =     at tests/sources/functional/invariants.move:81:9: invalid_R_update_indirectly

error:  This assertion might not hold.

    ┌── tests/sources/functional/invariants.move:14:9 ───
    │
 14 │         invariant update x <= old(x) && tautology();
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:69:5: invalid_R_update_ref (entry)
    =     at tests/sources/functional/invariants.move:70:13: invalid_R_update_ref
    =     at tests/sources/functional/invariants.move:71:22: invalid_R_update_ref
    =         r = <redacted>,
    =         t = <redacted>
    =     at tests/sources/functional/invariants.move:72:14: invalid_R_update_ref
    =         r = <redacted>

error:  This assertion might not hold.

    ┌── tests/sources/functional/invariants.move:11:9 ───
    │
 11 │         invariant greater_one(x);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:107:5: lifetime_invalid_R (entry)
    =     at tests/sources/functional/invariants.move:108:13: lifetime_invalid_R
    =     at tests/sources/functional/invariants.move:109:21: lifetime_invalid_R
    =         r = <redacted>,
    =         r_ref = <redacted>
    =     at tests/sources/functional/invariants.move:110:26: lifetime_invalid_R
    =         x_ref = <redacted>
    =     at tests/sources/functional/invariants.move:111:18: lifetime_invalid_R
    =         r_ref = <redacted>,
    =         x_ref = <redacted>

error:  This assertion might not hold.

    ┌── tests/sources/functional/invariants.move:14:9 ───
    │
 14 │         invariant update x <= old(x) && tautology();
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:120:5: lifetime_invalid_R_2 (entry)
    =     at tests/sources/functional/invariants.move:121:13: lifetime_invalid_R_2
    =     at tests/sources/functional/invariants.move:122:21: lifetime_invalid_R_2
    =         r = <redacted>,
    =         r_ref = <redacted>
    =     at tests/sources/functional/invariants.move:123:26: lifetime_invalid_R_2
    =         x_ref = <redacted>
    =     at tests/sources/functional/invariants.move:124:18: lifetime_invalid_R_2
    =         r_ref = <redacted>,
    =         x_ref = <redacted>
    =     at tests/sources/functional/invariants.move:125:18: lifetime_invalid_R_2
    =         r_ref = <redacted>,
    =         x_ref = <redacted>
    =     at tests/sources/functional/invariants.move:127:17: lifetime_invalid_R_2
    =         r_ref = <redacted>
    =     at tests/sources/functional/invariants.move:128:22: lifetime_invalid_R_2
    =         x_ref = <redacted>
    =     at tests/sources/functional/invariants.move:129:18: lifetime_invalid_R_2
    =         r_ref = <redacted>,
    =         x_ref = <redacted>

error:  This assertion might not hold.

     ┌── tests/sources/functional/invariants.move:145:9 ───
     │
 145 │         invariant y > 1;
     │         ^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/invariants.move:148:5: lifetime_invalid_S_branching (entry)
     =     at tests/sources/functional/invariants.move:149:11: lifetime_invalid_S_branching
     =         cond = <redacted>
     =     at tests/sources/functional/invariants.move:150:21: lifetime_invalid_S_branching
     =         a = <redacted>,
     =         b = <redacted>
     =     at tests/sources/functional/invariants.move:151:19: lifetime_invalid_S_branching
     =         a_ref = <redacted>
     =     at tests/sources/functional/invariants.move:152:19: lifetime_invalid_S_branching
     =         b_ref = <redacted>
     =     at tests/sources/functional/invariants.move:153:23: lifetime_invalid_S_branching
     =         $t5 = <redacted>,
     =         x_ref = <redacted>
     =     at tests/sources/functional/invariants.move:155:11: lifetime_invalid_S_branching
     =     at tests/sources/functional/invariants.move:158:11: lifetime_invalid_S_branching
     =         a_ref = <redacted>,
     =         b_ref = <redacted>,
     =         $t5 = <redacted>,
     =         x_ref = <redacted>
